[package]
name = "cryptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbkdf2 = "0.9.0"
rand_core = { version = "0.6", features = ["std"] }
rand = "0.4"
sha3 = "0.9.1"
curve25519-dalek = "3.2.0"
byteorder = "1.4.3"
ecies = "0.2.1"